--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server",
+    "dev": "cross-env REACT_ENV=dev webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {
@@ -54,16 +55,6 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "prettier": "^2.2.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
     "@babel/core": "^7.17.10",
     "@babel/node": "^7.17.10",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
@@ -87,11 +78,22 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@emotion/babel-plugin": "^11.9.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "file-loader": "^6.2.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.2.1",
     "style-loader": "^3.3.1",
     "svg-sprite-loader": "^6.0.11",
     "webpack": "^5.72.0",
